<resources>
    <string name="app_name">么马</string>
    <string name="setting" translatable="false">设置</string>
    <string name="resume" translatable="false">Resume</string>
    <string name="title_dialog" translatable="false">Tips</string>
    <string name="not_wx_pay" translatable="false">您未安装最新版本微信，不支持微信支付，请安装或升级微信版本</string>
    <string name="message_permission_rationale">授予下列权限以继续程序:\n\n%1$s</string>
    <string name="message_overlay_failed">您的电话不允许我们使用其他应用程序.</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>
    <string name="share_title" translatable="false">么马邀请</string>
    <string name="share_content" translatable="false">大家一起来</string>
    <string name="digits" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="error_phone" translatable="false">手机号码格式错误</string>
    <string name="error_phone1" translatable="false">手机号码或验证码为空</string>
    <string name="error_" translatable="false">请输入完整</string>
    <string name="error_2" translatable="false">请输入</string>
    <string name="error_3" translatable="false">请上传完整</string>
    <string name="error_nickname" translatable="false">请输入您的昵称</string>
    <string name="error_nickname1" translatable="false">请输入您的姓名</string>
    <string name="error_pwd_length" translatable="false">密码位于6~16位</string>
    <string name="error_head" translatable="false">请上传您的头像</string>
    <string name="please_phone" translatable="false">请输入手机号码</string>
    <string name="please_phone1" translatable="false">输入您的联系方式</string>
    <string name="please_code" translatable="false">请输入验证码</string>
    <string name="please_pwd1" translatable="false">请再次输入密码</string>
    <string name="please_pwd2" translatable="false">两次密码不一致</string>
    <string name="please_pwd3" translatable="false">请输入密码</string>
    <string name="error_1" translatable="false">请阅读协议</string>
    <string name="please_name" translatable="false">输入昵称</string>
    <string name="order_desc" translatable="false">订单详情</string>
    <string name="please_receiving_name" translatable="false">请输入收货人姓名</string>
    <string name="please_evaluation" translatable="false">请输入评价信息</string>
    <string name="location" translatable="false">所在地区</string>
    <string name="please_invitation_code" translatable="false">请输入邀请码</string>
    <string name="submit" translatable="false">确定</string>
    <string name="submit2" translatable="false">提交</string>
    <string name="submit1" translatable="false">完成</string>
    <string name="submit3" translatable="false">保存</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="login" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
    <string name="new_register" translatable="false">新用户注册</string>
    <string name="forget_pwd" translatable="false">忘记密码</string>
    <string name="reset_password" translatable="false">重置密码</string>
    <string name="information" translatable="false">完善信息</string>
    <string name="please_hp" translatable="false">选择您的生日</string>
    <string name="birthday_prone" translatable="false">生日趴</string>
    <string name="consult" translatable="false">资讯</string>
    <string name="gift" translatable="false">礼包</string>
    <string name="gift_desc" translatable="false">礼包详情</string>
    <string name="birthday_memorandum" translatable="false">生日备忘录</string>
    <string name="set" translatable="false">设置</string>
    <string name="user_evaluate" translatable="false">用户评价</string>
    <string name="collection" translatable="false">收藏</string>
    <string name="my_order" translatable="false">我的订单</string>
    <string name="manage" translatable="false">管理</string>
    <string name="election" translatable="false">全选</string>
    <string name="freight" translatable="false">运费</string>
    <string name="add_address1" translatable="false"> 添加新地址</string>
    <string name="add_address" translatable="false">新增收货地址</string>
    <string name="add_address2" translatable="false">我的收货地址</string>
    <string name="delete" translatable="false">删除</string>
    <string name="head" translatable="false">头像</string>
    <string name="edit" translatable="false">编辑</string>
    <string name="pay" translatable="false">支付</string>
    <string name="total" translatable="false">总计:</string>
    <string name="user_head" translatable="false">个人头像</string>
    <string name="mema" translatable="false">么马号</string>
    <string name="set_mema" translatable="false">设置么马号</string>
    <string name="birthday" translatable="false">生日</string>
    <string name="sex" translatable="false">性别</string>
    <string name="set_sex" translatable="false">设置性别</string>
    <string name="address" translatable="false">地区</string>
    <string name="customer" translatable="false">客服</string>
    <string name="immediately" translatable="false">立即购买</string>
    <string name="set_address" translatable="false">地区设置</string>
    <string name="me_zking" translatable="false">我的二维码</string>
    <string name="name" translatable="false">名字</string>
    <string name="concessions" translatable="false">折扣优惠</string>
    <string name="user_info" translatable="false">个人信息</string>
    <string name="set_name" translatable="false">设置名字</string>
    <string name="nan" translatable="false">男</string>
    <string name="nv" translatable="false">女</string>
    <string name="more" translatable="false">更多</string>
    <string name="new_arrival" translatable="false">最新上架</string>
    <string name="please_sku" translatable="false">请选择规格</string>
    <string name="choose" translatable="false">请选择</string>
    <string name="direct" translatable="false">直属团队人数</string>
    <string name="mailbox" translatable="false">邮箱</string>
    <string name="direct1" translatable="false">请输入0~10000的数字</string>
    <string name="locate" translatable="false">定位到到位置</string>
    <string name="all" translatable="false">全部</string>
    <string name="confirmation_orders" translatable="false">确认订单</string>
    <string name="lock_all" translatable="false">查看全部</string>
    <string name="mema1" translatable="false">扫描二维码图案，加我么马</string>
    <string name="account" translatable="false">账号与安全</string>
    <string name="message" translatable="false">新消息通知</string>
    <string name="privacy" translatable="false">隐私</string>
    <string name="clear_cash" translatable="false">清除缓存</string>
    <string name="help" translatable="false">帮助与反馈</string>
    <string name="help1" translatable="false">帮助</string>
    <string name="about" translatable="false">关于么马</string>
    <string name="out" translatable="false">退出登陆</string>
    <string name="change_password" translatable="false">修改密码</string>
    <string name="change_password1" translatable="false">更改密码</string>
    <string name="bind_phone" translatable="false">绑定手机号</string>
    <string name="bind_phone1" translatable="false">更改绑定</string>
    <string name="mema2" translatable="false">已绑定的手机号不能更改</string>
    <string name="voice" translatable="false">声音</string>
    <string name="shock" translatable="false">震动</string>
    <string name="is_search" translatable="false">是否被搜索</string>
    <string name="blacklist" translatable="false">黑名单</string>
    <string name="message_not" translatable="false">新消息通知</string>
    <string name="recovery" translatable="false">恢复</string>
    <string name="mema3" translatable="false">请详细描述您遇到的问题</string>
    <string name="mema4" translatable="false">可留下您的联系方式</string>
    <string name="scoring" translatable="false">去评分</string>
    <string name="pay_success" translatable="false">支付成功</string>
    <string name="wx" translatable="false">微信</string>
    <string name="zfb" translatable="false">支付宝</string>
    <string name="complaint" translatable="false">投诉</string>
    <string name="order_evaluation" translatable="false">订单评价</string>
    <string name="price" translatable="false">价格</string>
    <string name="screen" translatable="false">筛选</string>
    <string name="info" translatable="false">基本信息</string>
    <string name="operator_name" translatable="false">经营者姓名</string>
    <string name="hui" translatable="false">惠</string>
    <string name="merchant_information" translatable="false">商家信息</string>
    <string name="merchant_entry" translatable="false">商家入驻</string>
    <string name="get_code" translatable="false">获取验证码</string>
    <string name="code" translatable="false">验证码</string>
    <string name="selected" translatable="false">已选：</string>
    <string name="registration" translatable="false">预定登记</string>
    <string name="invitation_code" translatable="false">邀请码</string>
    <string name="version_update" translatable="false">版本更新</string>
    <string name="mema5" translatable="false">程诺科技 版权所有 \n Copyright © 2019 chengnuokeji. All Rights Reserved.</string>
    <string name="add_records" translatable="false">添加新记录</string>
    <string name="add_records1" translatable="false">添加生日记录</string>
    <string name="recordbook" translatable="false">记录本</string>
    <string name="name_relationship" translatable="false">输入朋友的姓名/关系</string>
    <string name="choose_birthday" translatable="false">选择他的生日</string>
    <string name="search" translatable="false">搜索</string>
    <string name="weixin" translatable="false">微信号</string>
    <string name="weixin1" translatable="false">请输入微信号</string>
    <string name="shop_category" translatable="false">商品分类</string>
    <string name="shop1" translatable="false">商品</string>
    <string name="cake" translatable="false">蛋糕</string>
    <string name="shop_desc" translatable="false">-----   商品详情   -----</string>
    <string name="eat" translatable="false">吃</string>
    <string name="drink" translatable="false">喝</string>
    <string name="play" translatable="false">玩</string>
    <string name="hHappy" translatable="false">乐</string>
    <string name="free" translatable="false">免费</string>
    <string name="mema6" translatable="false">请选择投诉该内容的原因</string>
    <string name="mema7" translatable="false">用户投诉反馈</string>
    <string name="mema8" translatable="false">请输入搜索内容</string>
    <string name="mema9" translatable="false">请选择举报该用户（言论）的原因</string>
    <string name="mema10" translatable="false">谈点什么...</string>
    <string name="mema11" translatable="false">说点什么...</string>
    <string name="all_comments" translatable="false">全部评论</string>
    <string name="praise_most" translatable="false">最新评论</string>
    <string name="news_desc" translatable="false">详情</string>
    <string name="copy" translatable="false">复制</string>
    <string name="report" translatable="false">举报</string>
    <string name="world" translatable="false">世界</string>
    <string name="to_pay" translatable="false">去付款</string>
    <string name="call_order" translatable="false">取消订单</string>
    <string name="apply_refund" translatable="false">申请退款</string>
    <string name="look_wuliu" translatable="false">查看物流</string>
    <string name="confirm_receipt" translatable="false">确认收货</string>
    <string name="to_evaluate" translatable="false">去评价</string>
    <string name="evaluate" translatable="false">评价</string>
    <string name="good_friend" translatable="false">好友</string>
    <string name="my_prone" translatable="false">我的生日趴</string>
    <string name="release" translatable="false">发布</string>
    <string name="look_order" translatable="false">查看订单</string>
    <string name="continue_shopping" translatable="false">继续购物</string>
    <string name="msg" translatable="false">通知</string>
    <string name="mema12" translatable="false">么马号四位数并且包含数字和英文</string>
    <string name="type_application" translatable="false">申请类型</string>
    <string name="address_application" translatable="false">申请地区</string>
    <string name="something" translatable="false">写点什么</string>
    <string name="submission" translatable="false">提交申请</string>
    <string name="mema17" translatable="false"> 输入详细地址：如道路、小区、门牌号</string>
    <string name="mema19" translatable="false">设置为默认地址</string>
</resources>