<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_top_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_account"
                style="@style/Tv15black"
                android:layout_width="match_parent"
                android:background="?actionBarItemBackground"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20"
                android:padding="@dimen/px30"
                android:text="@string/account" />

            <View style="@style/divider_2" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_message"
                style="@style/Tv15black"
                android:layout_width="match_parent"
                android:background="?actionBarItemBackground"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20"
                android:padding="@dimen/px30"
                android:text="@string/message" />

            <View style="@style/divider_3" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_privacy"
                style="@style/Tv15black"
                android:layout_width="match_parent"
                android:background="?actionBarItemBackground"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20"
                android:padding="@dimen/px30"
                android:text="@string/privacy" />

            <View style="@style/divider_2" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_clear"
                style="@style/Tv15black"
                android:layout_width="match_parent"
                android:background="?actionBarItemBackground"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20"
                android:padding="@dimen/px30"
                android:text="@string/clear_cash" />

            <View style="@style/divider_2" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_help"
                style="@style/Tv15black"
                android:layout_width="match_parent"
                android:background="?actionBarItemBackground"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20"
                android:padding="@dimen/px30"
                android:text="@string/help" />

            <View style="@style/divider_3" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_about"
                style="@style/Tv15black"
                android:layout_width="match_parent"
                android:background="?actionBarItemBackground"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20"
                android:padding="@dimen/px30"
                android:text="@string/about" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/bt_submit"
            style="@style/RedTextView"
            android:layout_marginLeft="@dimen/px30"
            android:layout_marginRight="@dimen/px30"
            android:layout_marginBottom="@dimen/px50"
            android:text="@string/out"
            app:rv_cornerRadius="@dimen/px10"
            app:rv_backgroundColor="@color/red_F67690" />

    </LinearLayout>

</layout>