<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_top"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_img"
            android:layout_gravity="center"
            android:layout_width="123dp"
            android:layout_height="123dp"
            android:layout_marginTop="@dimen/px80"
            android:background="@mipmap/y1" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_marginTop="@dimen/px20"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:text="@string/app_name"
                style="@style/Tv15black" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_verison"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            style="@style/Tv15black" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="@dimen/px80"
            android:id="@+id/tv_scoring"
            style="@style/Tv15black"
            android:layout_width="match_parent"
            android:background="?actionBarItemBackground"
            android:drawableRight="@mipmap/y16"
            android:drawablePadding="@dimen/px20"
            android:padding="@dimen/px30"
            android:text="@string/scoring" />

        <View style="@style/divider_3" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_complaint"
            style="@style/Tv15black"
            android:layout_width="match_parent"
            android:background="?actionBarItemBackground"
            android:drawableRight="@mipmap/y16"
            android:drawablePadding="@dimen/px20"
            android:padding="@dimen/px30"
            android:text="@string/complaint" />

        <View style="@style/divider_3" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_update"
            style="@style/Tv15black"
            android:layout_width="match_parent"
            android:background="?actionBarItemBackground"
            android:drawableRight="@mipmap/y16"
            android:drawablePadding="@dimen/px20"
            android:padding="@dimen/px30"
            android:text="@string/version_update" />

        <View style="@style/divider_3" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Tv12gray"
            android:layout_marginBottom="@dimen/px20"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/mema5" />

    </LinearLayout>

</layout>