<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_f4f4f4"
        android:orientation="vertical">

        <include layout="@layout/include_top_gray"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/error_nickname1"
            android:padding="@dimen/px30"
            style="@style/Tv15black"
            android:background="@color/white" />

        <View
            style="@style/divider_3"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="phone"
            android:maxLength="11"
            android:hint="@string/please_phone1"
            android:padding="@dimen/px30"
            style="@style/Tv15black"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/ly_type"
            android:background="@color/white"
            android:layout_marginTop="@dimen/px20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="@dimen/px30"
                android:text="@string/type_application" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_type"
                style="@style/Tv15black"
                android:background="@color/white"
                android:drawableRight="@mipmap/y16"
                android:padding="@dimen/px30" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_address"
            android:layout_marginTop="@dimen/px20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="@dimen/px30"
                android:text="@string/address_application" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_address"
                android:drawableRight="@mipmap/y16"
                android:padding="@dimen/px30"
                style="@style/Tv15black"
                android:background="@color/white" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_text"
            android:layout_marginTop="@dimen/px20"
            android:layout_width="match_parent"
            android:minLines="6"
            android:maxLines="6"
            android:gravity="top"
            android:hint="@string/something"
            android:padding="@dimen/px30"
            style="@style/Tv15black"
            android:background="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.flyco.roundview.RoundTextView
            android:id="@+id/bt_submit"
            app:rv_cornerRadius="@dimen/px10"
            android:layout_marginLeft="@dimen/px40"
            android:layout_marginRight="@dimen/px40"
            android:layout_marginBottom="@dimen/px60"
            android:textColor="@color/white"
            android:padding="@dimen/px30"
            app:rv_backgroundColor="@color/red_F67690"
            app:rv_backgroundPressColor="@color/red_EE3257"
            android:gravity="center"
            android:text="@string/submission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</layout>