<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/include_top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/px30">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/head" />


            <com.yc.mema.weight.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:src="@mipmap/place_holder_user" />

        </LinearLayout>

        <View style="@style/divider_2" />

        <LinearLayout
            android:id="@+id/ly_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/px30">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_weight="1"
                android:text="@string/name" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_name"
                style="@style/Tv15gray"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_moma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/px30">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_weight="1"
                android:text="@string/mema" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_moma"
                style="@style/Tv15gray"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/px30">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_weight="1"
                android:text="@string/birthday" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_birthday"
                style="@style/Tv15gray"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/px30">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_weight="1"
                android:text="@string/sex" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_sex"
                style="@style/Tv15gray"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/px30">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_weight="1"
                android:text="@string/address" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_address"
                style="@style/Tv15gray"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_zking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/px30">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Tv15black"
                android:layout_weight="1"
                android:text="@string/me_zking" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_zking"
                style="@style/Tv15gray"
                android:drawableRight="@mipmap/y16"
                android:drawablePadding="@dimen/px20" />

        </LinearLayout>

    </LinearLayout>

</layout>